2005-11-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/tgif.trm (TGIF_init): Message "Creator: gnuplot %s patchlevel %s"
	instead of $Header:$ in output file header.

2005-11-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/gadgets.c (clip_point) src/term.c (do_arrow): If terminal
	flag TERM_CAN_CLIP is set, then set canvas clipping description 
	to NULL.

	* src/term_api.h src/term.c: Export on_page() so that it can be
	used for clipping tests by other core modules.

	* src/gadgets.c (write_label): If a label has an associated point,
	clip the point using the same test as were used for the label itself.

2005-11-24  Juergen Wieferink  <wieferink@freenet.de>

	* src/util.c (parse_sq) src/scanner.c (scanner) docs/gnuplot.doc:
	Fixed \' in single-quoted strings.

2005-11-24  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gplt_x11.c: Linked list of color maps separate from the linked
	list for x11 plots. Bugfix for different color palettes in different
	x11 terminal windows and resizing them.

2005-11-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/hidden3d.c (build_networks): Fix handling of previousvertex
	variable for point-like objects, which don't need it.

2005-11-14  Juergen Wieferink  <wieferink@freenet.de>

	* src/set.c (set_xyzlabel): Fix parsing error in backwards-compatible
	form "set xlabel 'foo' -1,-1".

2005-11-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics): Check whether user-specified tic is major
	or minor before choosing a line type for the corresponding grid line.

	* term/gd.trm (ENHGD_put_text) term/pdf.trm (ENHPDF_put_text):
	Fix typos that caused justification to fail for rotated, enhanced
	mode text strings.

2005-11-11  Harald Harders  <h.harders@tu-bs.de>

	* src/axis.c (axis_output_tics): Normally the tics are placed to
	dodge the border line.  If the border line is not drawn, then do
	not try to dodge it.

2005-11-11  Ethan Merritt  <merritt@u.washington.edu>
